HTML/assets/css/styles.css
/* ... */
.touch .scrollimation.fade-left{
	opacity:1;
	-webkit-transform: translateX(0px);
	-moz-transform: translateX(0px);
	-ms-transform: translateX(0px);
	transform:translateX(0px);
}

.touch .scrollimation.fade-up{
	opacity:1;
	-webkit-transform: translateY(0px);
	-moz-transform: translateY(0px);
	-ms-transform: translateY(0px);
	transform:translateY(0px);
}

/*----------------------
----- Media Queries ----
------------------------*/

@media (max-width:991px){
    
    .big-text{
        font-size:48px;
        line-height:52px;
        letter-spacing:0.01em;
        word-spacing: 0.15em;
    }

    #main-nav .nav a,
    #main-nav .nav a:active,
    #main-nav .nav a:hover{
        font-size:16px;
    }

    #main-nav li{
        margin:0 5px;
    }

    .percent{
        top:-60px;
        font-size: 42px;
    }
    
    #projects-container .project-item{
        width:320px;
        margin-bottom: 20px;
    }
    
    .project-item .hover-mask .project-title {
        margin-top:75px;
    }
    
    #project-slider{
        min-height:0;
    }
} 

@media (max-width:767px){

    body{
        font-size: 15px;
    }
    
    .lead{
      font-size:16px;
      font-weight:400;
    }
    
    .add-padding {
        padding-top:60px;
        padding-bottom:60px;
    }
    
    .big-text{
        font-size:38px;
        line-height:42px;
    }
    
    .section-title{
        margin-top:-20px;
        margin-bottom: 40px;
    }
    
    #main-nav{
        background:#fff;
        box-shadow: 0 0 3px rgba(0,0,0,0.2);
    }

    #main-nav .navbar-toggle{
        margin-bottom: 5px;
        margin-top: 5px;
        color:#6d6d6d;
        border-color:transparent !important;
    }

    #main-nav .navbar-toggle .icon-bar{
        width: 28px;
        height: 4px;
        margin-top: 0;
        background:#6d6d6d !important;
    }

    #main-nav .navbar-toggle .icon-bar + .icon-bar{
        margin-top: 4px;
    }
    
    #main-nav .container,
    #main-nav.scrolled .container{
        padding:5px 20px;
    }

    #main-nav .nav a,
    #main-nav .nav a:active,
    #main-nav .nav a:hover{
        line-height: 42px;
        text-align: center;
        color: #6d6d6d;
    }

    #main-nav .nav li.active a,
    #main-nav .nav a:hover{
        color: #F28C83;
    }

    #main-nav .navbar-brand{
        padding-top: 5px;
        font-size: 21px;
        color:#6d6d6d;
    }
    
    #main-nav .navbar-brand img{
        margin-right: 10px;
        max-width: 40px;
    }

    #home .container{
        margin-top:-80px;
    }

    #home p{
        font-size: 24px;
    }

    #home h1{
        font-size: 42px;
    }

    #home h1 + p{
        font-size: 21px;
    }
    
    .service-item{
        margin-bottom: 40px;
    }
    
    .polaroid {
        border:12px solid #fff;
        width:90%;
        max-width: 500px;
        margin:0 auto 35px;
        box-shadow: 3px 5px 8px rgba(0,0,0,0.5);
        -webkit-transform: rotate(-5deg);
        transform: rotate(-5deg);
    }
    
    .percent{
        top:-45px;
        font-size: 28px;
    }
    
    .skills-item p{
        font-size: 14px;
    }
    
    #filter-works ul li a{
        display:block;
        font-size:16px;
        height:18px;
        padding:10px 5px;
    }
    
    #project-title{
        font-size: 28px;
    }
    
    #twitter .tweet{
        font-size:18px;
        line-height:24px;
    }
    
    #contact-form{
        margin-top: 30px;
    }
    
    #gmap{
        height: 300px;
    }
}

@media (max-width:479px){
    
    #projects-container .project-item{
        width:300px;
        margin-bottom: 15px;
    }
    
    .project-item .hover-mask .project-title {
        margin-top:70px;
    }
} 

